<package>
  <name>joystick_handler</name>
  <version>0.0.1</version>
  <description>The joystick_handler package</description>
  <author email="xuningy@andrew.cmu.edu">Xuning Yang</author>
  <maintainer email="xuningy@andrew.cmu.edu">Xuning Yang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>control_arch</build_depend>
  <build_depend>joystick_ui</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>one_euro_filter</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>control_arch</run_depend>
  <run_depend>joystick_ui</run_depend>
  <run_depend>parameter_utils</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>one_euro_filter</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
