<package>
  <name>joystick_handler</name>
  <version>0.0.1</version>
  <description>The joystick_handler package</description>
  <author email="xuningy@andrew.cmu.edu">Xuning Yang</author>
  <maintainer email="xuningy@andrew.cmu.edu">Xuning Yang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>joystick_ui</build_depend>
  <build_depend>ros_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>one_euro_filter</build_depend>
  <build_depend>planning_control_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>joystick_ui</run_depend>
  <run_depend>ros_utils</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>one_euro_filter</run_depend>
  <run_depend>planning_control_interface</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
